--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 
 Flask==0.12
+gunicorn==19.6.0
+
 heroku==0.1.4
 
 
@@ -8,6 +10,7 @@ oauthlib==2.0.2
 
 pandas==0.24.2
 pandocfilters==1.4.2
+
 requests
 spotipy
 
