--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,9 @@ heroku==0.1.4
 numpy==1.14.0
 oauthlib==2.0.2
 
-pandas==0.22.0
+pandas==0.25.1
 pandocfilters==1.4.2
+python-dateutil==2.8.0
 
 requests
 spotipy
