First version of working flask
missing song_idList2.pkl

--- a/Flask_API/Pipfile
+++ b/Flask_API/Pipfile
@@ -6,12 +6,12 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-pandas = "*"
 flask = "*"
-numpy = "*"
-spotipy = "*"
 gunicorn = "*"
 heroku3 = "*"
+scikit-learn = "*"
+sklearn = "*"
+pandas = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
