--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,5 @@ Flask_AWS/SOUNDDRIP/sounddrip/
 
 data_collection/env_vars.py
 data_collection/final_data/DF_v1.pkl
+Flask_AWS/SOUNDDRIP/flask_app.zip
+Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app.zip
