--- a/Flask_AWS/SOUNDDRIP/.ebextensions/SounddripDev-env.config
+++ b/Flask_AWS/SOUNDDRIP/.ebextensions/SounddripDev-env.config
@@ -1,9 +1,9 @@
 option_settings:
   "aws:elasticbeanstalk:container:python":
     WSGIPath: application.py
-<!-- files:
+files:
   "/etc/httpd/conf.d/wsgi_custom.conf":
     mode: "000644"
     owner: root
     group: root
-    content: WSGIApplicationGroup %{GLOBAL} -->
+    content: WSGIApplicationGroup %{GLOBAL} 
