--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,4 @@ spotipy/spotipy_test/
 
 data_collection/env_vars.py
 data_collection/final_data/DF_v1.pkl
+Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app.zip
