--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,4 @@ venv.bak/
 
 data_collection/env_vars.py
 data_collection/final_data/DF_v1.pkl
+Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app.zip
