--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,6 @@ Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app.zip
 data_collection/song_list.db
 data_collection/song_list copy.db
 data_collection/for_backend/song_list4.sqlite3
+data_collection/final_data/DF_v2.pkl
+data_collection/song_list_v2 copy.db
+data_collection/song_list_v2.db
