--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,5 @@ Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app.zip
 Flask_AWS/SOUNDDRIP/sounddrip/
 data_collection/final_data/DF_v2.pkl
 data_collection/final_data/DF_v2.csv
+data_collection/song_list_v2.db
+data_collection/song_list_v2_backup.db
