--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,6 @@ data_collection/env_vars.py
 data_collection/final_data/DF_v1.pkl
 Flask_AWS/SOUNDDRIP/flask_app.zip
 Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app.zip
+data_collection/song_list_v2_backup.db
+data_collection/final_data/DF_v2.pkl
+data_collection/song_list_v2.db
