--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,5 @@ data_collection/final_data/DF_v2.pkl
 data_collection/final_data/DF_v2.csv
 data_collection/song_list_v2.db
 data_collection/song_list_v2_backup.db
+data_collection/final_data/DF_v3.pkl
+data_collection/song_list_v3.db
