--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,5 @@ Flask_AWS/SOUNDDRIP/flask_app.zip
 Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app.zip
 data_collection/final_data/DF_v2.pkl
 data_collection/song_list_v2.db
+data_collection/final_data/DF_v3.pkl
+data_collection/song_list_v3.db
