--- a/Flask_AWS/SOUNDDRIP/requirements.txt
+++ b/Flask_AWS/SOUNDDRIP/requirements.txt
@@ -1,6 +1,8 @@
 certifi==2019.11.28
+cffi==1.14.0
 chardet==3.0.4
 click==6.7
+cryptography==2.8
 Flask==1.1.1
 Flask-Cors==3.0.8
 gunicorn==20.0.4
@@ -12,6 +14,8 @@ joblib==0.14.1
 MarkupSafe==1.0
 numpy==1.18.1
 pandas==0.25.3
+pycparser==2.19
+pyOpenSSL==19.1.0
 python-dateutil==2.8.1
 pytz==2019.3
 requests==2.22.0
