--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,4 @@ data_collection/song_list_v2_backup.db
 data_collection/final_data/DF_v3.pkl
 model_notebooks/DF_v3.pkl
 data_collection/song_list_v3.db
+data_collection/final_data/DF_v4.pkl
