--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,5 @@ data_collection/final_data/DF_v3.pkl
 model_notebooks/DF_v3.pkl
 data_collection/song_list_v3.db
 data_collection/final_data/DF_v4.pkl
+model_notebooks/DF_genres_hashed.pkl
+model_notebooks/DF_v4.pkl
