--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,8 @@ Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app.zip
 Flask_AWS/SOUNDDRIP/sounddrip/
 data_collection/final_data/DF_v2.pkl
 data_collection/final_data/DF_v2.csv
+model_notebooks/DF_v4.pkl
+data_collection/final_data/DF_v3.pkl
+data_collection/final_data/DF_v4.pkl
+data_collection/song_list_v3.db
+model_notebooks/DF_genres_hashed.pkl
