--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,4 @@ data_collection/song_list_v3.db
 data_collection/final_data/DF_v4.pkl
 model_notebooks/DF_genres_hashed.pkl
 model_notebooks/DF_v4.pkl
+model_notebooks/data/X_array.pkl
