--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,5 @@ data_collection/final_data/DF_v4.pkl
 model_notebooks/DF_genres_hashed.pkl
 model_notebooks/DF_v4.pkl
 model_notebooks/data/X_array.pkl
+model_notebooks/data/song_list_v4_hashed.pkl
+model_notebooks/data/song_list_v5_hashed.pkl
