--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,4 @@ model_notebooks/DF_v4.pkl
 model_notebooks/data/X_array.pkl
 model_notebooks/data/song_list_v4_hashed.pkl
 model_notebooks/data/song_list_v5_hashed.pkl
+model_notebooks/data/DF_Genres_List_v1.pkl
