updated DBSCAN notebook

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,6 @@ model_notebooks/data/X_array.pkl
 model_notebooks/data/song_list_v4_hashed.pkl
 model_notebooks/data/song_list_v5_hashed.pkl
 model_notebooks/data/DF_Genres_List_v1.pkl
+model_notebooks/song_list_v4_hashed.pkl
+model_notebooks/song_list_v4_hashed (1).pkl
+model_notebooks/DBSCAN_Model.pkl
