--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,5 @@ Flask_AWS/SOUNDDRIP/sounddrip/
 model_notebooks/data/song_id_array3.pkl
 model_notebooks/data/song_list_v4_hashed(1).pkl
 model_notebooks/model3.joblib
+model_notebooks/data/model3.joblib
+model_notebooks/data/genres_array.pkl
