--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,4 @@ model_notebooks/data/song_list_v4_hashed(1).pkl
 model_notebooks/model3.joblib
 model_notebooks/data/model3.joblib
 model_notebooks/data/genres_array.pkl
+model_notebooks/data/genres_array_2.pkl
