pushing latest code slated for Flask staging process

--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,7 @@ model_notebooks/data/model5.joblib
 *.joblib
 Flask_notebooks/data/song_id_list2(1).joblib
 Flask_notebooks/models/scalar2-Copy1.joblib
+Flask_notebooks/env_vars.py
+Flask_notebooks/models/model2.joblib
+model_notebooks/knn_model_v1.ipynb
+model_notebooks/knn_model_v3_with_genre_filtering.ipynb
