created new method for getting user_id in user_table_db_updates
Co-Authored-By: zwarshavsky <zwarshavsky@users.noreply.github.com>

--- a/unique-song-reqs/Pipfile
+++ b/unique-song-reqs/Pipfile
@@ -10,6 +10,8 @@ psycopg2 = "*"
 pandas = "*"
 ipykernel = "*"
 spotipy = "*"
+scikit-learn = "*"
+flask = "*"
 
 [requires]
 python_version = "3.7"
