--- a/Flask_AWS/SOUNDDRIP/requirements.txt
+++ b/Flask_AWS/SOUNDDRIP/requirements.txt
@@ -14,6 +14,7 @@ joblib==0.14.1
 MarkupSafe==1.0
 numpy==1.18.1
 pandas==0.25.3
+psycopg2==2.8.4
 pycparser==2.19
 pyOpenSSL==19.1.0
 python-dateutil==2.8.1
