added updates to flask app and staging notebook
Co-Authored-By: Xander Bennett <xander-bennett@users.noreply.github.com>
Co-Authored-By: Riley Pence <fuse999@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,6 @@ Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app/models/predict.py
 Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app/misc/robots.txt
 Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app/application.py
 Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app/.ebextensions/SounddripDev-env.config
+Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app022720.zip
+Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app022720_v2.zip
+Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app022720_v3.zip
