--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,5 @@ Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app/.ebextensions/SounddripDev-env.
 Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app022720.zip
 Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app022720_v2.zip
 Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app022720_v3.zip
+Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app022820_v1.zip
+Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app022820_v2.zip
