--- a/Flask_AWS/SOUNDDRIP/requirements.txt
+++ b/Flask_AWS/SOUNDDRIP/requirements.txt
@@ -12,6 +12,7 @@ itsdangerous==0.24
 Jinja2==2.10.1
 joblib==0.14.1
 MarkupSafe==1.0
+more-itertools==8.2.0
 numpy==1.18.1
 pandas==0.25.3
 psycopg2-binary==2.8.4
