--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,4 @@ Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app022720_v2.zip
 Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app022720_v3.zip
 Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app022820_v1.zip
 Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app022820_v2.zip
+model_notebooks/model2.joblib
