patch for removing null values from seed song list db lookup

--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,4 @@ Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app022720_v3.zip
 Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app022820_v1.zip
 Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app022820_v2.zip
 model_notebooks/model2.joblib
+Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app022920_v1.zip
