--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,26 @@ model_notebooks/song_list_v4_hashed (1).pkl
 model_notebooks/DBSCAN_Model.pkl
 Flask_AWS/SOUNDDRIP/sounddrip/
 
+model_notebooks/data/song_list_v6_genre_embeds.pkl
+model_notebooks/data/song_list_v6.pkl
+model_notebooks/data/model2.joblib
+model_notebooks/data/knn_model7.joblib
+model_notebooks/data/DF_v4.pkl
+model_notebooks/data/DF_genres_hashed.pkl
+Flask_notebooks/models/slider_model6.joblib
+Flask_notebooks/models/scalar3.joblib
+Flask_notebooks/models/model5.joblib
+Flask_notebooks/data/song_id_array3.pkl
+Flask_notebooks/data/genres_array_2.pkl
+Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app022920_v1.zip
+Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app022820_v2.zip
+Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app022820_v1.zip
+Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app022720_v3.zip
+Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app022720_v2.zip
+Flask_AWS/SOUNDDRIP/zip_for_aws_sample/flask_app022720.zip
+Flask_AWS/SOUNDDRIP/models/slider_model6.joblib
+Flask_AWS/SOUNDDRIP/models/scalar3.joblib
+Flask_AWS/SOUNDDRIP/models/model5.joblib
+Flask_AWS/SOUNDDRIP/flask_app.zip
+Flask_AWS/SOUNDDRIP/data/song_id_array3.pkl
+Flask_AWS/SOUNDDRIP/data/genres_array_2.pkl
